ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Plant_Period__c/Plant_Period__c.object-meta.xml
<CustomObject>
    <description>Used to track the start and end dates of manufacturing periods of a product family at a plant</description>
    <label>Plant Period</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plant Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>