ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Plant_Period__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Last date of manufacturing for this product family at the plant</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>