ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Plant_Period__c/fields/Last_Date_of_Install__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_of_Install__c</fullName>
    <formula>ADDMONTHS(End_Date__c, 36)</formula>
    <inlineHelpText>Calculated from the End Date of Manufacturing, used to track the latest date when this can be applied to a Claim Case</inlineHelpText>
    <label>Last Date of Install</label>
    <type>Date</type>
</CustomField>