ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Plant_Period__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <inlineHelpText>Product Family that is produced at the Plant</inlineHelpText>
    <label>Product Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>